--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="docker-compose, docker, stack">
     <meta name="author" content="Tutum dev team">
     <link rel='stylesheet' href="{{ url_for('static',filename='stylesheets/style.css') }}" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
     <div id="content-container">
@@ -35,12 +35,12 @@
 
       if(vote == "a"){
         $(".a").prop('disabled', true);
-        $(".a").html('{{option_a}} <i class="fa fa-check-circle"></i>');
+        $(".a").html('{{option_a}} <i class="fas fa-check-circle"></i>');
         $(".b").css('opacity','0.5');
       }
       if(vote == "b"){
         $(".b").prop('disabled', true);
-        $(".b").html('{{option_b}} <i class="fa fa-check-circle"></i>');
+        $(".b").html('{{option_b}} <i class="fas fa-check-circle"></i>');
         $(".a").css('opacity','0.5');
       }
     </script>
